--- a/visualworkflow/package.json
+++ b/visualworkflow/package.json
@@ -7,11 +7,9 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
-    "gojs": "^2.1.34",
-    "gojs-react": "^1.0.10",
-    "konva": "^7.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-flow-renderer": "^8.7.0",
     "react-konva": "^17.0.1-3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
